# cardo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stylelint.config.cjs  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
.github/workflows/: build-test.yml  ci.yml  deploy-website.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  app.css  i18n.ts  main.tsx  render-smoke.test.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: assistant.rs  claude.rs  lib.rs  main.rs  notes.rs  sync.rs  sync_files.rs  sync_gdrive.rs
apps/desktop/src-tauri/src/legal/: akoma.rs  at.rs  ch.rs  de.rs  eu.rs  fr.rs  mod.rs  uk.rs
apps/desktop/src/assistant/: AssistantSettings.tsx  AssistantWidget.tsx  api.ts  assistant-settings.css  assistant-widget.css  assistant.css  assistant.test.ts  capabilities.test.ts  capabilities.ts  catalog.ts  chats.test.ts  chats.ts  claude.test.ts  competences.test.ts  competences.ts  css.d.ts  docs.ts  hostBridge.ts  index.ts  memory.test.ts  memory.ts  models.test.ts  models.ts  profiles.test.ts  profiles.ts  prompt.ts  proposals.test.ts  proposals.ts  routing.test.ts  routing.ts  store.ts  tool.tsx  toolcontrol.test.ts
apps/desktop/src/canvas/: AddWidgetMenu.tsx  Canvas.tsx  LayoutEngine.tsx  WidgetFrame.tsx  WidgetHelp.tsx
apps/desktop/src/design/: DesignPanel.tsx  ThemeEditor.tsx  customThemes.ts  design.css  design.ts  presets.ts
apps/desktop/src/diagnose/: coverage.test.ts  coverageChecks.ts  networkChecks.ts  runDiagnose.ts  securityChecks.ts  uiChecks.tsx
apps/desktop/src/focus/: FocusMode.tsx  focus.css
apps/desktop/src/host/: anki.ts  backend.ts  files.ts  index.ts  layout.test.ts  layout.ts  layoutCommands.ts  legal.ts  net-guard.test.ts  net.ts  services.ts  shortcuts.ts  syncCommands.ts  tools.ts  updates.offline.test.ts  updates.ts  workspaceCommands.ts
apps/desktop/src/inbox/: Inbox.tsx  feed.offline.test.ts  feed.ts
apps/desktop/src/market/: ToolMarket.tsx
apps/desktop/src/onboarding/: TemplatePicker.tsx  Tour.tsx
apps/desktop/src/palette/: CommandPalette.tsx  paramFields.ts
apps/desktop/src/polls/: config.ts
apps/desktop/src/profile/: ProfileModal.tsx
apps/desktop/src/settings/: BackupSection.tsx  DiagnosePanel.tsx  PollsPanel.tsx  SettingsModal.tsx  SettingsPage.tsx  SyncSection.tsx  settings-page.css
apps/desktop/src/state/: appStore.ts
apps/website/: astro.config.mjs  package.json
apps/website/public/: install.ps1  install.sh  polls.json
apps/website/src/components/: Barometer.astro  CopyBlock.astro
apps/website/src/data/: barometer.json
apps/website/src/layouts/: Base.astro
apps/website/src/lib/: site.ts
apps/website/src/pages/: admin.astro  assistant.astro  donate.astro  download.astro  index.astro  polls.astro  privacy.astro
apps/website/src/pages/docs/: index.astro  tutorial.astro
crates/cardo-core/: Cargo.toml
crates/cardo-core/migrations/: 0001_init.sql  0002_schedules.sql  0003_sync.sql
crates/cardo-core/src/: anki.rs  diagnose.rs  error.rs  hlc.rs  identity.rs  lib.rs  srs.rs  storage.rs  sync.rs  sync_crypto.rs  sync_engine.rs  sync_folder.rs  sync_keys.rs
docs/: SECURITY-NOTES.md  google-drive-oauth-setup.md
scripts/: check-i18n.mjs  check-manifests.mjs  check-secrets.mjs  check-themes.mjs  merge-i18n-scratch.mjs  new-tool.mjs  token-lint.sh
server/polls-worker/: README.md  schema.sql  wrangler.toml
server/polls-worker/src/: index.ts
server/polls-worker/test/: fake-d1.mjs  worker.test.mjs
