[workspace]
resolver = "2"
members = ["crates/cardo-core", "apps/desktop/src-tauri"]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v7"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
