[package]
name = "cardo-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "json",
] }
tempfile = "3"
# Sync key system + end-to-end encryption (zero-knowledge transports).
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
getrandom = "0.2"

[dev-dependencies]
tokio = { workspace = true }
