[package]
name = "cardo-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cardo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cardo-core = { path = "../../../crates/cardo-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sysinfo = "0.35"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target."cfg(target_os = \"macos\")".dependencies]
llama-cpp-2 = { version = "0.1.151", features = ["metal"] }

[target."cfg(not(any(target_os = \"macos\", target_os = \"android\", target_os = \"ios\")))".dependencies]
llama-cpp-2 = { version = "0.1.151" }
